@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.19
 
+	- The scheduler now allows file:/dev/null device URIs
+	  even if FileDevices is set to No.
 	- CUPS uses strerror() for hostname resolution errors,
 	  when it should have used hstrerror().
 	- The USB backend didn't sort the devices entries, so it
